app/assets/stylesheets/layout-solstice.css.scss
@import 'vars-solstice';

.S-ctrl {
  background-color: $solstice-dark-brown;
}
.S-heading {
  background-image: image-url('solstice/header-640.jpg');
  background-position: center;
  background-size: cover;
  height: 200px;
  overflow: hidden;
  position: relative;
}
.S-logo {
  width: 120px * .75;
  height: 198px * .75;
  background-size: cover;
  background-image: image-url('solstice/logo-120.png');
  margin-top: 20px;
}

@media (min-width: 768px) {
  .S-logo {
    margin-top: 40px;
    margin-left: 40px;
    width: 240px * .75;
    height: 397px * .75;
    background-size: cover;
    background-image: image-url('solstice/logo-240.png');
  }
  .S-heading {
    background-image: image-url('solstice/header-960.jpg');
    height: 440px;
  }
}
@media (min-width: 1024px) {
  .S-heading {
    background-image: image-url('solstice/header-1280.jpg');
    height: 530px;
  }
}
@media (min-width: 1200px) {
  .S-heading {
    height: 600px;
  }
}
@media (min-width: 1201px) {
  .S-heading {
    background-image: image-url('solstice/header-1440.jpg');
  }
}
.S-logo--fixed {
  width: 120px * .666;
  height: 198px * .666;
  background-size: cover;
  background-image: image-url('solstice/logo-120.png');
  position: fixed;
  margin: 0;
  top: 5px;
  left: 30px;
  z-index: 1002;
}

.S-nav {
  position: absolute;
  top: 10px;
  right: 10px;
  background-color: transparent;
  transition: background-color 0.5s;
//  display: none;
}
@media (min-width: 768px) {
  .S-nav {
    display: block;
  }
}
.S-nav__item {
  display: inline-block;
  margin: 0;
  line-height: 1;
  margin-right: 5px;
  &:last-child {
    margin-right: 0;
  }
}
.S-nav__link {
  display: inline-block;
  color: $solstice-white;
  font-weight: 600;
  text-transform: uppercase;
  padding: 0 10px;
  height: 25px;
  line-height: 25px;
  font-size: 13px;
  transition: all 0.2s;
  background-color: $solstice-orange;
  border-radius: 4px;
  font-family: $solstice-font-stack;

  &:hover {
    color: lighten($solstice-white, 10%);
  }
  &:visited {
    color: $solstice-white;
  }
}
.S-nav--fixed {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  padding: 5px 30px;
  background-color: $solstice-muted-green;
  background-image: linear-gradient(
    brighten($solstice-muted-green, 10%) 15%,
    transparent 30%
  );
  background-size: auto 50px;
  text-align: right;
  z-index: 1001;
  box-shadow: 0 0 5px rgba(0,0,0,.6);
}
.S-Grid {
  padding: 0 20px 80px;
}
.S-p {
  font-family: $solstice-font-stack;
  font-weight: 600;
  font-size: 16px;
  color: $solstice-white;
  line-height: 1.7;
}
@media (min-width: 768px) {
  .S-p {
    font-size: 18px;
  }
}
.S-p--disclaimer {
  font-style: italic;
  font-size: 14px;
  text-align: center;
  opacity: 0.8;
}
@media (min-width: 768px) {
  .S-p {
    max-width: 520px;
    margin-left: auto;
    margin-right: auto;
  }
}
.S-Grid--intro .S-p {
  &:first-child {
    margin-top: 30px;
  }
}
@media (min-width: 768px) {
  .S-Grid--intro .S-p:first-child {
    margin-top: 50px;
  }
}
.S-a,
.S-a:link,
.S-a:visited {
  color: $solstice-orange;
}
.Solistice-signup-btn-wrap {
  margin: 100px 0 20px;
  text-align: center;
}
.Solistice-signup-btn,
.Solistice-signup-btn:visited {
  font-size: 30px;
  background-color: $solstice-orange;
  font-family: $solstice-font-stack;
  font-weight: 600;
  color: $solstice-white;
  display: inline-block;
  padding: 0 40px;
  line-height: 60px;
  height: 60px;
  border-radius: 3px;

  &:hover {
    color: $solstice-white;
    background-color: darken($solstice-orange, 3%);
  }
}
.Solistice-signup-btn--welcome {
  line-height: 1.2;
  height: auto;
  padding: 10px 40px;
}
.S-p--map-heading {
  max-width: none;
  text-align: center;
  margin-top: 20px;
}
.angular-leaflet-map {
  height: 320px;
  border: 4px #fff solid;
  box-shadow: 0 0 5px -1px rgba(0, 0, 0, 1);
  margin: 0 auto;
}
@media (min-width: 768px) {
  .S-Grid--social,
  .S-Grid--map {
    max-width: 90%;
    margin: 0 auto;
  }
  .angular-leaflet-map {
    height: 520px;
  }
}
@media (min-width: 1024px) {
  .S-Grid--social,
  .S-Grid--map {
    max-width: 80%;
  }
  .angular-leaflet-map {
    height: 640px;
  }
}
.S-map--chooser {
  margin-top: 10px;
  color: $solstice-white;
}
.S-map--btn {
  margin: 0;
  padding: 0;
  border: none;
  background-color: transparent;
  display: inline;
  color: $solstice-orange;
  font-size: inherit;
  &:focus { outline: none; }
}

.S-hashtag-img {
  width: 240px;
}
@media (min-width: 768px) {
  .S-col--rec-gear,
  .S-col--prizes {
    width: 142px;
    margin: 40px auto;
  }
}

.S-col-heading {
  font-size: 16px;
}

